# loopingwilli-firmware

./: .gitignore  .gitmodules  CMakeLists.txt  Kconfig  sdkconfig  sdkconfig.old
components/button/: CMakeLists.txt
components/button/include/button/: button.h
components/button/src/button/: button.cpp  port.c  toggle.c
components/device/: CMakeLists.txt  device.c
components/device/include/device/: Device.h
components/device/src/: Device.cpp
components/events/: CMakeLists.txt
components/events/include/events/: Event.h  EventData.h  EventLoop.h  Events.h
components/events/src/: Event.cpp  EventData.cpp  EventLoop.cpp  Events.cpp
components/game/: CMakeLists.txt  Kconfig  game.c
components/game/include/game/: MainLoop.h
components/game/src/: MainLoop.cpp
components/hardware/: CMakeLists.txt
components/hardware/include/bluetooth/: BluetoothManager.h
components/hardware/include/hardware/bluetooth/: BluetoothManager.h
components/hardware/include/hardware/core/: IInitializableHardware.h
components/hardware/include/hardware/input/: Button.h  InterruptButton.h
components/hardware/include/hardware/led/: Color.h  LedStrip.h
components/hardware/src/bluetooth/: BluetoothManager.cpp
components/hardware/src/input/: Button.cpp  InterruptButton.cpp
components/hardware/src/led/: Color.cpp  LedStrip.cpp
components/logging/: CMakeLists.txt  idf_component.yml  logging.c
components/logging/include/logging/: Logger.h
components/logging/src/: Logger.cpp
main/: CMakeLists.txt  app_main.cpp
